# fme-packager

./: .editorconfig  .gitignore  CHANGES.md  LICENSE  MANIFEST.in  Pipfile  README.dev.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release-pypi.yml  tests.yml
fme_packager/: __init__.py  __main__.py  cli.py  context.py  extractor.py  fme_env.py  help.py  metadata.py  operations.py  packager.py  spec.json  summarizer.py  summarizer_spec.json  transformer.py  utils.py  verifier.py  web_service.py
fpkgr/: __main__.py  cli.py  exception.py  metadata.py  operations.py  packager.py  spec.json
tests/: conftest.py  test_config_env.py  test_extractor.py  test_help.py  test_packager.py  test_summarizer.py  test_transformer_parsing.py  test_utils.py  test_verifier.py  test_web_service.py
tests/fixtures/custom_package/: package.yml
tests/fixtures/custom_package/transformers/: customEncrypted2Ver.fmx  customFooBar.fmx  epochToTimestamp29.fmx
tests/fixtures/data_processing_types/: CHANGES.md  README.md  package.yml
tests/fixtures/data_processing_types/transformers/: AttributeFileReader.fmx  AttributeFileReader.fmxj  AttributeFileReader.md  AttributeFileReaderCopy.fmxj  AttributeFileReaderCopy.md  AttributeFileWriter.fmx  AttributeFileWriter.md  BoxConnector.fmx  BoxConnector.md  HTTPCaller.fmxj  HTTPCaller.md  bothLinked.fmx  bothLinked.md
tests/fixtures/fmxj_package/: CHANGES.md  README.md  package.yml
tests/fixtures/fmxj_package/help/: DemoGreeter.md
tests/fixtures/fmxj_package/python/fme_demogreeter/: README.md  pyproject.toml  setup.cfg  vendorize.toml
tests/fixtures/fmxj_package/python/fme_demogreeter/src/fme_demogreeter/: transformer.py
tests/fixtures/fmxj_package/transformers/: DemoGreeter.fmxj  DemoGreeter.md
tests/fixtures/fpkgs/: example.data-processing-types-0.1.0.fpkg  example.invalid-package-0.1.0.fpkg  example.my-format-0.1.0.fpkg  example.my-format-multi-categories-0.1.0.fpkg  example.my-package-0.1.0.fpkg  example.my-package-changed-filename-0.1.0.fpkg  example.my-package-deprecated-0.1.0.fpkg
tests/fixtures/help/htm/: package_help.csv
tests/fixtures/help/htm/Transformers/: Transformer-pkg.htm
tests/fixtures/help/md/: Transformer.md
tests/fixtures/incompatible_custom_package/transformers/: epochToTimestamp29.fmx
tests/fixtures/incompatible_package/: package.yml
tests/fixtures/incompatible_package/transformers/: MyGreeter.fms  MyGreeter.fmx  MyGreeter.md
tests/fixtures/json_output/: summarize_example.data-processing-types-0.1.0.fpkg.json  summarize_example.empty.json  summarize_example.my-format-0.1.0.fpkg.json  summarize_example.my-package-0.1.0.fpkg.json  summarize_example.my-package-deprecated-0.1.0.fpkg.json
tests/fixtures/valid_package/: CHANGES.md  package.yml
tests/fixtures/valid_package/transformers/: MyGreeter.fmx  MyYeller.fms  MyYeller.fmx  MyYeller.md
tests/fixtures/valid_package/web_services/: My Web Service.xml
tests/fixtures/web_services/: 2024 Web Service.xml  Invalid Web Service.xml
