[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]

[tool.coverage.run]
source = [
    "fme_packager",
    "tests",
]
omit = [
    "*/tests/fixtures/**",
    "*/venv/**",
]

[tool.pytest.ini_options]
addopts = "-s --strict-markers -m 'not slow'"
markers = [
    "slow: mark test as slow",
]
