[metadata]
name = fme_packager
version = attr: fme_packager.__version__
author = Safe Software Inc.
description = Tool for creating FME Packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = FME fmeobjects
url = https://github.com/safesoftware/fme-packager
license = BSD
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
packages = fme_packager
include_package_data = True
python_requires = >=3.6
install_requires =
    click~=8.0.0
    cookiecutter~=1.7.2
    defusedxml~=0.6.0
    jsonschema~=3.2.0
    pypng~=0.0.20
    ruamel.yaml~=0.16.10
    xmltodict~=0.12.0
    packaging~=21.0
    build~=0.7.0
    setuptools>=45.2.0

[options.extras_require]
dev =
    pipenv
    pytest
    black
    twine

[options.entry_points]
console_scripts =
    fme-packager = fme_packager.cli:cli
