[metadata]
name = fme_packager
version = attr: fme_packager.__version__
author = Safe Software Inc.
description = Tool for creating FME Packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = FME fmeobjects
url = https://github.com/safesoftware/fme-packager
license = BSD
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
packages = fme_packager
include_package_data = True
python_requires = >=3.7
install_requires =
    click>=8.1.6
    cookiecutter>=2.2.3
    jsonschema>=4.17.3
    pypng>=0.20220715.0
    ruamel.yaml>=0.17.32
    xmltodict>=0.13.0
    packaging>=23.1
    build>=0.10.0
    wheel>=0.40.0
    setuptools>=68.0.0
    markdown>=3.4.3

[options.extras_require]
dev =
    pipenv
    pytest
    black
    tox
    twine
    urllib3<2

[options.entry_points]
console_scripts =
    fme-packager = fme_packager.cli:cli
