[metadata]
name = fme_demogreeter
version = attr: fme_demogreeter.__version__
author = FME Lizard
description = Code for the example.my-package.DemoGreeter transformer in FME
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fme fmepy package
url = https://hub.safe.com/publishers/example/packages/my-package
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: FME

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    vendorize
    pytest
    black~=22.1.0
